crates/uitest/fixtures/parser/struct_.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/struct_.fe
---
error[1-0001]: expected name for struct definition
  ┌─ struct_.fe:1:11
  │
1 │ pub struct<T, U
  │           ^ expected identifier

error[1-0001]: missing closing `>` for generic parameter list
  ┌─ struct_.fe:1:16
  │
1 │ pub struct<T, U
  │                ^ expected `>` or `,`

error[1-0001]: missing type bound for `where` predicate
  ┌─ struct_.fe:2:8
  │
2 │ where T 
  │        ^ expected `:`

error[1-0001]: expected `,`
  ┌─ struct_.fe:2:8
  │
2 │ where T 
  │        ^ expected `,`

error[1-0001]: missing type bound for field
  ┌─ struct_.fe:6:8
  │
6 │     foo
  │        ^ expected `:`

error[1-0001]: missing closing `}` for record field list
  ┌─ struct_.fe:6:8
  │
6 │     foo
  │        ^ expected `}` or `,`

error[1-0001]: function definition in struct is not allowed
   ┌─ struct_.fe:11:9
   │
11 │     pub fn foo()  -> i32 {
   │         ^^ function definition in struct is not allowed

error[1-0001]: missing closing `}` for record field list
   ┌─ struct_.fe:13:6
   │
13 │     }
   │      ^ expected `}` or `,`


